# SDOptimizer-backend

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/dependencies/file_validation/: __init__.py
app/api/routers/: __init__.py
app/api/routers/models/: __init__.py  response_schemas.py  simulation.py
app/config/: __init__.py  logging.py
app/core/agent/: e_greedy_agent.py
app/core/enviroment/: base.py  pysd_enviroment.py
app/core/models/: pysd_wrapper.py
app/core/operations/models/: __init__.py
app/core/optimizer/: model_optimizer.py
app/core/patching/: __init__.py  pysd_function_patcher.py
app/core/readers/: pysd_model_reader.py  pysd_parser.py
app/core/rl_agent/: e_greedy_bandit_agent.py
app/core/simulator/: pysd_simulator.py
app/core/utils/: model_loader.py
app/core/validation/: __init__.py  file_validator.py  validators.py
app/exceptions/: __init__.py
app/lifespan/: __init__.py
app/middleware/: __init__.py  session.py
app/schemas/: __init__.py  models.py  optimizer.py  simulation.py  validations.py
app/temp/_6gSzrXq644HN-w74UJJLQ/uploads/2002a44f0529/: INTRO.py
app/temp/_6gSzrXq644HN-w74UJJLQ/uploads/a0872e909eb4/: LotkaVolterra.mdl  LotkaVolterra.py
